--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.17.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
